<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.studyjams.s1.sj16.weitong.PsychologyActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/Title"
            android:text="@string/psyTitle" />
        <TextView
            style="@style/Artical"
            android:text="@string/psyArticle" />
        <Button
            android:id="@+id/btnPsyUrl1"
            style="@style/SubLink"
            android:text="@string/btnpsyUrl1"
            android:onClick="url"/>
        <Button
            android:id="@+id/btnPsyUrl2"
            style="@style/SubLink"
            android:text="@string/btnpsyUrl2"
            android:onClick="url"/>
        <Button
            android:id="@+id/btnPsyUrl3"
            style="@style/SubLink"
            android:text="@string/btnpsyUrl3"
            android:onClick="url"/>

        <TextView
            style="@style/Artical"
            android:text="@string/psyEnd"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <Button
                style="@style/SubButton"
                android:onClick="back"
                android:text="《-" />


        </LinearLayout>
    </LinearLayout>

</ScrollView>
