<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cn.studyjams.s1.sj16.weitong.HairLayersActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/Title"
            android:text="@string/tvExtension" />

        <TextView
            style="@style/Artical"
            android:text="@string/extend1" />

        <ImageView
            style="@style/SubImage2"
            android:src="@drawable/a5_1" />

        <TextView
            style="@style/Artical"
            android:text="@string/extend2" />

        <ImageView
            style="@style/SubImage2"
            android:src="@drawable/a5_2" />

        <Button
            style="@style/SubLink"
            android:onClick="url"
            android:text="@string/extendUrl" />

        <TextView
            style="@style/Title"
            android:text="@string/extend3"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <Button
                style="@style/SubButton"
                android:onClick="back"
                android:text="《-" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>


